web-infras/parser/tests/fixtures/esprima/es2017/async/functions/invalid-expression-body-contains-super-call/output.txt
[SyntaxError]: super() is only valid in derived class constructors (17,22)
17|(async function*() { super(); });
 |                    ^
[SyntaxError]: `super()` is only valid inside a class constructor of a subclass. Maybe a typo in the method name ('constructor') or not extending another class? (17,22)
17|(async function*() { super(); });
 |                    ^
